[gd_scene load_steps=13 format=2]

[ext_resource path="res://prefabs/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/White-Background.jpg" type="Texture" id=2]
[ext_resource path="res://assets/vcr_osd_mono/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://prefabs/NumDIno2.gd" type="Script" id=4]
[ext_resource path="res://prefabs/Crossover_percent2.gd" type="Script" id=5]
[ext_resource path="res://prefabs/Mutation2.gd" type="Script" id=6]
[ext_resource path="res://prefabs/Random pop2.gd" type="Script" id=7]
[ext_resource path="res://assets/flight1.png" type="Texture" id=8]
[ext_resource path="res://assets/dead.png" type="Texture" id=9]
[ext_resource path="res://assets/information/Info0.png" type="Texture" id=10]
[ext_resource path="res://prefabs/Panel.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]

resource_local_to_scene = true
size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Resource", "Settings" ]

[node name="Menu" type="Node2D"]

script = ExtResource( 1 )

[node name="White-Background" type="Sprite" parent="." index="0"]

position = Vector2( 490.916, 332.304 )
rotation = 1.5708
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Initialpop_slider" type="HSlider" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 624.0
margin_top = 281.0
margin_right = 824.0
margin_bottom = 297.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 2.0
max_value = 200.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Hint", "Rect" ]

[node name="NumDIno2" type="Label" parent="Initialpop_slider" index="0"]

modulate = Color( 0.0976562, 0.00534058, 0.00534058, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 219.0
margin_top = -6.0
margin_right = 327.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="NumDIno" type="Label" parent="Initialpop_slider" index="1"]

modulate = Color( 0.0976562, 0.00534058, 0.00534058, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -349.0
margin_top = -10.0
margin_right = -25.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Initial Population"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Crossover_slider" type="HSlider" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 625.0
margin_top = 330.0
margin_right = 825.0
margin_bottom = 346.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 1.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Mouse" ]

[node name="Crossover_percent" type="Label" parent="Crossover_slider" index="0"]

modulate = Color( 0.0976562, 0.00534058, 0.00534058, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -392.0
margin_top = -8.0
margin_right = -14.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Crossover Probability"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Crossover_percent2" type="Label" parent="Crossover_slider" index="1"]

modulate = Color( 0.0976562, 0.00534058, 0.00534058, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 214.0
margin_top = -7.0
margin_right = 592.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Mutation" type="HSlider" parent="." index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 628.0
margin_top = 380.0
margin_right = 828.0
margin_bottom = 396.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 1.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Mouse" ]

[node name="Mutation" type="Label" parent="Mutation" index="0"]

modulate = Color( 0.0976562, 0.00534058, 0.00534058, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -374.0
margin_top = -10.0
margin_right = 4.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Mutation Probability"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Mutation2" type="Label" parent="Mutation" index="1"]

modulate = Color( 0.0976562, 0.00534058, 0.00534058, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 215.0
margin_top = -7.0
margin_right = 593.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Random generation" type="HSlider" parent="." index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 628.0
margin_top = 424.0
margin_right = 828.0
margin_bottom = 440.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 1.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Mouse" ]

[node name="Random pop" type="Label" parent="Random generation" index="0"]

modulate = Color( 0.0976562, 0.00534058, 0.00534058, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -340.0
margin_top = -9.0
margin_right = 38.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Random Generation"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Random pop2" type="Label" parent="Random generation" index="1"]

modulate = Color( 0.0976562, 0.00534058, 0.00534058, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_top = -9.0
margin_right = 594.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Title" type="Label" parent="." index="5"]

modulate = Color( 0.0976562, 0.00534058, 0.00534058, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 271.0
margin_top = 88.0
margin_right = 397.0
margin_bottom = 115.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "DINO AI"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Play AI" type="Label" parent="." index="6"]

modulate = Color( 0.0976562, 0.00534058, 0.00534058, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 759.0
margin_top = 597.0
margin_right = 1083.0
margin_bottom = 624.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Play  your DINO"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Play AI2" type="Label" parent="." index="7"]

modulate = Color( 0.0976562, 0.00534058, 0.00534058, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 271.0
margin_top = 589.0
margin_right = 595.0
margin_bottom = 616.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Train your DINO"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Sprite" type="Sprite" parent="." index="8"]

editor/display_folded = true
position = Vector2( 108.221, -36.3534 )

[node name="flight1" type="Sprite" parent="Sprite" index="0"]

position = Vector2( 942.767, 190.147 )
texture = ExtResource( 8 )

[node name="dead" type="Sprite" parent="Sprite" index="1"]

position = Vector2( 60.3639, 200.43 )
texture = ExtResource( 9 )

[node name="Button" type="Button" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 332.0
margin_top = 494.0
margin_right = 410.0
margin_bottom = 538.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Train"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Button2" type="Button" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 821.0
margin_top = 495.0
margin_right = 899.0
margin_bottom = 539.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Initial_p0" type="TextureButton" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1100.0
margin_top = 273.0
margin_right = 1164.0
margin_bottom = 337.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
_sections_unfolded = [ "Rect" ]

[node name="Panel" type="Panel" parent="Initial_p0" index="0"]

self_modulate = Color( 1, 1, 1, 0.939255 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2209.0
margin_top = -564.0
margin_right = 449.0
margin_bottom = 1001.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 11 )
_sections_unfolded = [ "Visibility" ]

[node name="Back" type="Button" parent="Initial_p0/Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2101.0
margin_top = 259.0
margin_right = 2143.0
margin_bottom = 279.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Title" type="Label" parent="Initial_p0/Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 881.0
margin_top = 374.0
margin_right = 990.0
margin_bottom = 390.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Initial population"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="Text" type="Label" parent="Initial_p0/Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 266.0
margin_top = 485.0
margin_right = 892.0
margin_bottom = 592.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "This is the number of Dinos that will be generated on each generation. 

The minimum value is 2 and the maximum is 200. There needs to be 
at least 2 since the top  2 will become the parents of the next generation. 
However, the higher the number the more likely that one of the Dinos 
will perform really well from the start.

* Recommend not going over 100. If the game slows down, reduce
 this number until it is stable. 

* The longer you train the Dinos the better they will perform.

*Use 2x speed to train faster."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="CrossOver" type="TextureButton" parent="." index="12"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1100.0
margin_top = 320.0
margin_right = 1164.0
margin_bottom = 384.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
_sections_unfolded = [ "Rect" ]

[node name="Panel" type="Panel" parent="CrossOver" index="0"]

self_modulate = Color( 1, 1, 1, 0.939255 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2261.0
margin_top = -670.0
margin_right = 397.0
margin_bottom = 895.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 11 )
_sections_unfolded = [ "Visibility" ]

[node name="Back" type="Button" parent="CrossOver/Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2101.0
margin_top = 259.0
margin_right = 2143.0
margin_bottom = 279.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Title" type="Label" parent="CrossOver/Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 881.0
margin_top = 374.0
margin_right = 990.0
margin_bottom = 390.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Crossover Probality"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="Text" type="Label" parent="CrossOver/Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 266.0
margin_top = 485.0
margin_right = 892.0
margin_bottom = 592.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "This is the probability that any one of the genes will be crossed-over
from the parent's gene on to the offspring. In other words the pair of 
genetic information exchange equal segments with each other.

* Setting this number too high maybe bad for cases in which on parent 
greatly outperforms the other. 
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="Mutation2" type="TextureButton" parent="." index="13"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1100.0
margin_top = 369.0
margin_right = 1164.0
margin_bottom = 433.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
_sections_unfolded = [ "Rect" ]

[node name="Panel" type="Panel" parent="Mutation2" index="0"]

self_modulate = Color( 1, 1, 1, 0.939255 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2254.0
margin_top = -792.0
margin_right = 404.0
margin_bottom = 773.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 11 )
_sections_unfolded = [ "Visibility" ]

[node name="Back" type="Button" parent="Mutation2/Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2101.0
margin_top = 259.0
margin_right = 2143.0
margin_bottom = 279.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Title" type="Label" parent="Mutation2/Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 881.0
margin_top = 374.0
margin_right = 990.0
margin_bottom = 390.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Mutation"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="Text" type="Label" parent="Mutation2/Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 266.0
margin_top = 485.0
margin_right = 892.0
margin_bottom = 592.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Permanent alteration in the Genetic sequence of each Dino, 
such that the sequence differs from what is found in most DInos.

* Making this number too large will result in offsprings that
 are really different from that parents. 

* Making it too small can prevent the Dinos from becoming
 better than the parents"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="Random" type="TextureButton" parent="." index="14"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1100.0
margin_top = 411.0
margin_right = 1164.0
margin_bottom = 475.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
_sections_unfolded = [ "Rect" ]

[node name="Panel" type="Panel" parent="Random" index="0"]

self_modulate = Color( 1, 1, 1, 0.939255 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2249.0
margin_top = -890.0
margin_right = 409.0
margin_bottom = 675.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 11 )
_sections_unfolded = [ "Visibility" ]

[node name="Back" type="Button" parent="Random/Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2101.0
margin_top = 259.0
margin_right = 2143.0
margin_bottom = 279.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Title" type="Label" parent="Random/Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 881.0
margin_top = 374.0
margin_right = 990.0
margin_bottom = 390.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Random Generation"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="Text" type="Label" parent="Random/Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 266.0
margin_top = 485.0
margin_right = 892.0
margin_bottom = 592.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Random Generation, is the number of random Dinos that are created
 each Generation after the first since the first generation is made up 
of entirely random dinos.

*Making this number to large will means that all or most of the 
Dinos will be random and evolution will be lost. 

*Making this number to small can result in dinos that get
stuck in a bad solution and don't improve very much.
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[connection signal="value_changed" from="Initialpop_slider" to="." method="_on_HSlider_value_changed"]

[connection signal="value_changed" from="Crossover_slider" to="." method="_on_Crossover_slider_value_changed"]

[connection signal="value_changed" from="Mutation" to="." method="_on_Mutation_value_changed"]

[connection signal="value_changed" from="Random generation" to="." method="_on_Random_generation_value_changed"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="Initial_p0" to="Initial_p0/Panel" method="_on_Initial_p0_pressed"]

[connection signal="pressed" from="Initial_p0/Panel/Back" to="Initial_p0/Panel" method="_on_Back_pressed"]

[connection signal="pressed" from="CrossOver" to="CrossOver/Panel" method="_on_Initial_p0_pressed"]

[connection signal="pressed" from="CrossOver/Panel/Back" to="CrossOver/Panel" method="_on_Back_pressed"]

[connection signal="pressed" from="Mutation2" to="Mutation2/Panel" method="_on_Initial_p0_pressed"]

[connection signal="pressed" from="Mutation2/Panel/Back" to="Mutation2/Panel" method="_on_Back_pressed"]

[connection signal="pressed" from="Random" to="Random/Panel" method="_on_Initial_p0_pressed"]

[connection signal="pressed" from="Random/Panel/Back" to="Random/Panel" method="_on_Back_pressed"]


